--- a/hakyll-R.cabal
+++ b/hakyll-R.cabal
@@ -20,3 +20,8 @@ library
   hs-source-dirs: src
   ghc-options: -Wall -threaded
   default-language: Haskell2010
+
+source-repository head
+  type:              git
+  location:          https://github.com/cdupont/hakyll-R.git
+
