--- a/hakyll-R.cabal
+++ b/hakyll-R.cabal
@@ -1,5 +1,5 @@
 name:                hakyll-R
-version:             0.1.0.1
+version:             0.1.0.2
 synopsis:            A module allowing to write Hakyll blog posts in Rmd 
 description:         This package declares a Compiler for Rmd posts, which allows to include R code in Rmd and have them rendered (for example as plots).
 license:             BSD3 
@@ -12,11 +12,11 @@ cabal-version:       >=1.10
 library
   exposed-modules: Hakyll.Web.R    
   build-depends: base >=4.7 && <4.8,
-                 hakyll -any,
-                 process -any,
-                 filepath -any,
-                 pandoc -any,
-                 directory -any
+                 hakyll >=4.5 && <4.8,
+                 process ==1.2.*,
+                 filepath ==1.3.*,
+                 pandoc ==1.13.* && <1.16,
+                 directory ==1.2.*
   hs-source-dirs: src
   ghc-options: -Wall -threaded
   default-language: Haskell2010
