--- a/hakyll-R.cabal
+++ b/hakyll-R.cabal
@@ -11,7 +11,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules: Hakyll.Web.R    
-  build-depends: base >=4.7 && <4.8,
+  build-depends: base ==4.*,
                  hakyll >=4.5 && <4.8,
                  process ==1.2.*,
                  filepath ==1.3.*,
