--- a/hakyll-R.cabal
+++ b/hakyll-R.cabal
@@ -1,7 +1,7 @@
 name:                hakyll-R
-version:             0.1.0.2
-synopsis:            A module allowing to write Hakyll blog posts in Rmd 
-description:         This package declares a Compiler for Rmd posts, which allows to include R code in Rmd and have them rendered (for example as plots).
+version:             0.1.0.3
+synopsis:            A package allowing to write Hakyll blog posts in Rmd
+description:         This package allows to write blog posts for Hakyll in R-markdown. The R code inside the markdown will be rendered and inserted in the blog post, for example as a plot.
 license:             BSD3 
 author:              Corentin Dupont
 maintainer:          corentin.dupont@gmail.com
@@ -12,10 +12,10 @@ cabal-version:       >=1.10
 library
   exposed-modules: Hakyll.Web.R    
   build-depends: base ==4.*,
-                 hakyll >=4.5 && <4.8,
+                 hakyll >= 4.6 && < 4.8,
                  process ==1.2.*,
-                 filepath ==1.3.*,
-                 pandoc ==1.13.* && <1.16,
+                 filepath >= 1.3 && < 1.5,
+                 pandoc >= 1.13 && < 1.16,
                  directory ==1.2.*
   hs-source-dirs: src
   ghc-options: -Wall -threaded
