--- a/hakyll-R.cabal
+++ b/hakyll-R.cabal
@@ -2,7 +2,7 @@ name:                hakyll-R
 version:             0.1.0.3
 synopsis:            A package allowing to write Hakyll blog posts in Rmd
 description:         This package allows to write blog posts for Hakyll in R-markdown. The R code inside the markdown will be rendered and inserted in the blog post, for example as a plot.
-license:             BSD3 
+license:             BSD3
 author:              Corentin Dupont
 maintainer:          corentin.dupont@gmail.com
 category:            Web
@@ -10,13 +10,14 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules: Hakyll.Web.R    
+  exposed-modules: Hakyll.Web.R
   build-depends: base ==4.*,
                  hakyll >= 4.6 && < 4.8,
                  process ==1.2.*,
                  filepath >= 1.3 && < 1.5,
                  pandoc >= 1.13 && < 1.16,
-                 directory ==1.2.*
+                 directory ==1.2.*,
+                 R-pandoc -any
   hs-source-dirs: src
   ghc-options: -Wall -threaded
   default-language: Haskell2010
